@@ -10,6 +10,7 @@ int num_args_children (ELEMENT *e);
 /* Defined in dump_perl.c */
 char *dump_tree_to_string_1 (void);
 char *dump_tree_to_string_2 (void);
+char *dump_tree_to_string_25 (void);
 char *dump_tree_to_string_3 (void);
 char *dump_root_element_1 (void);
 char *dump_root_element_2 (void);
